--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -66,4 +66,7 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
+ body {
+  margin: 0;
+ }
