--- a/app/globals.css
+++ b/app/globals.css
@@ -67,6 +67,12 @@
     @apply bg-background text-foreground;
   }
 } */
- body {
+html {
+  /* overflow: hidden; */
+  width: 100vw;
   margin: 0;
- }
+}
+body {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
